# apalarse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: rust.yaml  rust.yml
apalarse/: Cargo.toml
apalarse-derive/: Cargo.toml
apalarse-derive/src/: lib.rs
apalarse/examples/: collatz.rs  derive.rs  sample.rs
apalarse/src/: lib.rs
apalarse/src/runner/: mod.rs
apalarse/src/tla/: context.rs  macros.rs  mod.rs
apalarse/src/tla/expr/: mod.rs  test.rs
apalarse/src/tla/symbol/: mod.rs  next.rs  test.rs  unchanged.rs  variable.rs
apalarse/src/tla/types/: mod.rs
apalarse/src/tla/types/bool/: mod.rs  test.rs
apalarse/src/tla/types/bool/constant/: mod.rs
apalarse/src/tla/types/bool/expr/: if_then_else.rs  in_set.rs  mod.rs  not_in_set.rs  quant.rs
apalarse/src/tla/types/int/: mod.rs  test.rs
apalarse/src/tla/types/int/constant/: mod.rs
apalarse/src/tla/types/int/expr/: mod.rs
apalarse/src/tla/types/list/: mod.rs  test.rs
apalarse/src/tla/types/list/constant/: mod.rs
apalarse/src/tla/types/list/expr/: append.rs  concat.rs  head.rs  list_domain.rs  list_get.rs  mod.rs  replace.rs  size.rs  tail.rs
apalarse/src/tla/types/map/: mod.rs  test.rs
apalarse/src/tla/types/map/constant/: mod.rs
apalarse/src/tla/types/map/expr/: domain.rs  map_get.rs  mod.rs  replace.rs
apalarse/src/tla/types/set/: mod.rs  test.rs
apalarse/src/tla/types/set/constant/: empty.rs  mod.rs  nat.rs  range_set.rs
apalarse/src/tla/types/set/expr/: cardinality.rs  cross.rs  difference.rs  filter.rs  intersect.rs  mapped_set.rs  mod.rs  set_map.rs  singleton.rs  subset_eq.rs  union.rs
apalarse/src/tla/types/str/: mod.rs  test.rs
apalarse/src/tla/types/str/constant/: id.rs  mod.rs
apalarse/src/tla/types/str/expr/: mod.rs
apalarse/src/utils/: mod.rs
