[workspace]
resolver = "2"
members = [
  "apalarse",
  "apalarse-derive",
]

[workspace.package]
version      = "0.1.0"
authors      = [ "Ranadeep Biswas <mail@rnbguy.at>" ]
readme       = "README.md"
repository   = "https://github.com/rnbguy/apalarse"
homepage     = "https://github.com/rnbguy/apalarse"
license      = "Apache-2.0"
description  = "Typed formal specifications in Rust"
edition      = "2021"
rust-version = "1.79"
keywords     = [ "tla", "apalache", "model-checker", "testing" ]
categories   = [ "development-tools", "development-tools::testing" ]


[workspace.lints.rust]
unused_imports = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }


# from `restriction` group
std_instead_of_core = "warn"


# allows
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
