[package]
name         = "apalarse-derive"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = { workspace = true }
readme       = { workspace = true }
description  = { workspace = true }
homepage     = { workspace = true }
categories   = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn         = { version = "2", features = [ "full" ] }
quote       = "1"
proc-macro2 = "1"

[lib]
proc-macro = true

[lints]
workspace = true
