[package]
name         = "apalarse"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = { workspace = true }
readme       = { workspace = true }
description  = { workspace = true }
homepage     = { workspace = true }
categories   = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow          = "1.0.75"
glob            = "0.3.1"
itf             = "0.2.2"
serde           = { version = "1", features = [ "derive" ] }
serde_json      = "1"
tempfile        = "3.8"
apalarse-derive = { path = "../apalarse-derive" }

[lints]
workspace = true
